--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,43 +1,42 @@
-
 /* Add your profile image here */
-.Photo{
-    background-image: url('https://images.pexels.com/photos/3799821/pexels-photo-3799821.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+.Photo {
+  background-image: url("https://images.pexels.com/photos/3799821/pexels-photo-3799821.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 /* Projects Photo */
-.project1{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+one');
-    cursor: none;    
+.project1 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+one");
+  cursor: none;
 }
-.project2{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+two');
-    cursor: none;
+.project2 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+two");
+  cursor: none;
 }
-.project3{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+three');
-    cursor: none;
+.project3 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+three");
+  cursor: none;
 }
-.project4{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+four');
-    cursor: none;
+.project4 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+four");
+  cursor: none;
 }
-.project5{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+five');
-    cursor: none;
+.project5 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+five");
+  cursor: none;
 }
-.project6{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+six');
-    cursor: none;
+.project6 {
+  background-image: url("https://via.placeholder.com/400x600.png?text=Project+six");
+  cursor: none;
 }
 /* Miscelaneous Activities photo */
-.misc1{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+one');
-    cursor: none;
+.misc1 {
+  background-image: url("https://visionpointmarketing.com/wp-content/uploads/2015/10/gwu_logo.png");
+  cursor: none;
 }
-.misc2{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+two');
-    cursor: none;
+.misc2 {
+  background-image: url("https://www.cvcc.edu/assets/images/logo-red.png");
+  cursor: none;
 }
-.misc3{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+three');
-    cursor: none;
+.misc3 {
+  background-image: url("https://cdn.shopify.com/s/files/1/0690/5359/files/2019-08-20_11.15.20_pm_1024x1024.png?v=1566357490");
+  cursor: none;
 }
