--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -12,19 +12,19 @@
   cursor: none;
 }
 .project3 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+three");
+  background-image: url("https://user-images.githubusercontent.com/82068157/129656969-70da3e8e-a653-40a0-90ee-d88c1971cc28.png");
   cursor: none;
 }
 .project4 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+four");
+  background-image: url("https://github.com/zdeal1026/zd-portfolio/blob/main/images/emptracker.png?raw=true");
   cursor: none;
 }
 .project5 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+five");
+  background-image: url("https://user-images.githubusercontent.com/82068157/127434803-6c491d65-c252-4592-8734-2a8d2f63455f.gif");
   cursor: none;
 }
 .project6 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+six");
+  background-image: url("https://user-images.githubusercontent.com/82068157/125005789-a23bac00-e02a-11eb-8fbd-630d0fbadaee.png");
   cursor: none;
 }
 /* Miscelaneous Activities photo */
