--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -4,11 +4,11 @@
 }
 /* Projects Photo */
 .project1 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+one");
+  background-image: url("https://github.com/DevinPawline/Ask_Oracle/raw/main/assets/Askoracle.gif");
   cursor: none;
 }
 .project2 {
-  background-image: url("https://via.placeholder.com/400x600.png?text=Project+two");
+  background-image: url("https://thumbs.dreamstime.com/b/ehr-electronic-health-record-concept-innovative-technologies-care-medicine-online-report-patients-to-doctors-via-179159245.jpg");
   cursor: none;
 }
 .project3 {
