--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,6 +1,6 @@
 /* Add your profile image here */
 .Photo {
-  background-image: url("https://images.pexels.com/photos/3799821/pexels-photo-3799821.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image: url("https://github.com/zdeal1026/zd-portfolio/blob/main/images/headshot.jpg?raw=true");
 }
 /* Projects Photo */
 .project1 {
